# Goreport

./: .gitignore  GoReport.py  README.md  gophish.config.sample  goreport  main.py  pyproject.toml
lib/: goreport.py
